# dict

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yml  jinkelacheckin.yml  maimemo-cookies.json  notepad.html
src/: a.rs  config.rs  http_client.rs  lib.rs  maimemo_client.rs  main.rs  word_store.rs  youdao_client.rs
src/client/: maimemo_client.rs  mod.rs  youdao_client.rs
