[package]
name = "youdao-dict-export"
version = "0.2.0"
authors = ["navyd <dhjnavyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "gzip", "cookies"] }
tokio = { version = "0.2", features = ["full"] }
# derive fix: "error: cannot find derive macro `Serialize` in this scope" with homepage example #1586
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
structopt = "0.3"
chrono = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
scraper = "0.12"
selectors = "0.22"
cssparser = "0.27"
cookie_store = "0.12"
# hyper = "0.13"
cookie = "0.14"
serde_urlencoded = "0.7"
viuer = "0.1"
image = "0.23"
# async-std = "1.6"
